<resources>
    <string name="app_name">Save Food Fresh v1.0</string>
    <string name="nombrexml">Nombre</string>
    <string name="fecha_de_vencimientoxml">Fecha de Vencimiento</string>
    <string name="cantidadxml">Cantidad</string>
    <string name="precioxml">Precio</string>
    <string name="categoriaxml">Categoría</string>
    <string name="descripcionxml">Descripción</string>
    <string name="agregarxml">Agregar</string>
    <string name="borrarxml">Borrar</string>
    <string name="editarxml">Editar</string>
    <string name="actualizarxml">actualizar</string>
    <string name="debes_llenar_todos_los_camposxml">DEBES LLENAR TODOS LOS CAMPOS</string>
    <string name="inicio_de_sesi_n_exitoso">Inicio de sesión exitoso</string>
    <string name="correo_o_contrase_a_incorrectos">Correo o contraseña incorrectos</string>
    <string name="cuenta_creada_correctamente">Cuenta creada correctamente</string>
    <string name="el_correo_electr_nico_ya_est_en_uso">El correo electrónico ya está en uso</string>
    <string name="verifique_la_contrase_a">Verifique la Contraseña</string>
    <string name="loging">Acceder a la Cuenta</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="sing_up">Crear una Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="buscar_por_nombre_o_categor_a">Buscar por nombre o categoría</string>
</resources>