<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="#FFFFFF">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="#FFFFFF"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nombrexml"
                android:padding="5dp" />

            <TextView
                android:id="@+id/tvFechaVencimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_de_vencimientoxml"
                android:gravity="center"
                android:padding="5dp" />


            <TextView
                android:id="@+id/tvCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cantidadxml"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precioxml"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/tvCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/categoriaxml"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcionxml"
                android:gravity="center"
                android:padding="5dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">





                <Button
                    android:id="@+id/btnBorrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borrarxml"
                    android:backgroundTint="#FF5252"
                    android:layout_gravity="center"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/editarxml"
                    android:backgroundTint="#FFD600"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
